Update ffm wrapper example